# arrow-adbc

./: .codespellrc  .gitignore  .pre-commit-config.yaml
.github/workflows/: node.yml  packaging.yml
ci/scripts/: node_build.sh  node_npm_upload.sh
dev/release/: post-09-npm.sh  rat_exclude_files.txt
javascript/: Cargo.toml
javascript/__test__/: test_utils.ts
javascript/core/src/: lib.rs
javascript/native/: .gitattributes  .prettierignore  Cargo.toml  README.md  binding.d.ts  binding.js  package-lock.json  package.json
javascript/native/__test__/: bind.spec.ts  error_handling.spec.ts  metadata.spec.ts  options.spec.ts  query.spec.ts  safety.spec.ts  test_utils.ts  transaction.spec.ts
javascript/native/lib/: error.ts  index.ts  types.ts
javascript/native/npm/darwin-arm64/: package.json
javascript/native/src/: lib.rs
node/: README.md  package-lock.json  package.json
node/core/: Cargo.toml
node/core/src/: lib.rs
node/native/: .gitattributes  .gitignore  .npmignore  .prettierignore  Cargo.toml  README.md  binding.d.ts  binding.js  index.d.ts  index.js  index.ts  package-lock.json  package.json  tsconfig.json
node/native/.husky/: pre-commit
node/native/__test__/: basic.spec.ts  bind.spec.ts  dispose.spec.ts  error_handling.spec.ts  index.spec.ts  metadata.spec.ts  options.spec.ts  safety.spec.ts  sqlite.spec.ts  test_utils.ts  transaction.spec.ts
node/native/benchmark/: bench.ts
node/native/lib/: error.ts  index.ts
node/native/src/: lib.rs
node/shared/: package-lock.json  package.json
node/shared/src/: index.ts
(+17 files in other folders)
